--- a/后台工程/base/private/biz-department/pom.xml
+++ b/后台工程/base/private/biz-department/pom.xml
@@ -20,6 +20,13 @@
             <artifactId>common</artifactId>
         </dependency>
         <!-- ================================================= -->
+        <!-- web                                               -->
+        <!-- ================================================= -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <!-- ================================================= -->
         <!-- 数据库                                             -->
         <!-- ================================================= -->
         <!-- mysql -->
@@ -32,6 +39,18 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+        <!-- ================================================= -->
+        <!-- 工具类                                             -->
+        <!-- ================================================= -->
+        <!-- swagger -->
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
         </dependency>
     </dependencies>
 </project>
