--- a/后台工程/base/public/main/src/main/resources/application.properties
+++ b/后台工程/base/public/main/src/main/resources/application.properties
@@ -1,5 +1,9 @@
-## 服务器配置
+# 服务器配置
 server.port=80
 
-## spring端点
+# spring端点
 management.port: 54001
+
+# 模板目录
+spring.mvc.view.prefix=classpath:/templates/
+spring.mvc.view.suffix=.html
