--- a/后台工程/base/private/department/department-server/pom.xml
+++ b/后台工程/base/private/department/department-server/pom.xml
@@ -23,6 +23,10 @@
             <groupId>com.base</groupId>
             <artifactId>department-client</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.base</groupId>
+            <artifactId>user-client</artifactId>
+        </dependency>
         <!-- ================================================= -->
         <!-- web                                               -->
         <!-- ================================================= -->
