--- a/后台工程/base/private/department/pom.xml
+++ b/后台工程/base/private/department/pom.xml
@@ -10,6 +10,10 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
+    <modules>
+        <module>department-client</module>
+        <module>department-server</module>
+    </modules>
 
     <artifactId>department</artifactId>
 
