--- a/后台工程/base/public/littleapp/pom.xml
+++ b/后台工程/base/public/littleapp/pom.xml
@@ -9,83 +9,13 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
+    <packaging>pom</packaging>
+    <modules>
+        <module>littleapp-client</module>
+        <module>littleapp-server</module>
+    </modules>
 
     <artifactId>littleapp</artifactId>
 
-    <dependencies>
-        <!-- ================================================= -->
-        <!-- 子模块                                             -->
-        <!-- ================================================= -->
-        <dependency>
-            <groupId>com.base</groupId>
-            <artifactId>common</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.base</groupId>
-            <artifactId>user</artifactId>
-        </dependency>
 
-        <!-- ================================================= -->
-        <!-- web                                               -->
-        <!-- ================================================= -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-
-        <!-- ================================================= -->
-        <!-- 工具类                                             -->
-        <!-- ================================================= -->
-        <!-- swagger -->
-        <dependency>
-            <groupId>io.springfox</groupId>
-            <artifactId>springfox-swagger2</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>io.springfox</groupId>
-            <artifactId>springfox-swagger-ui</artifactId>
-        </dependency>
-        <!-- fastjson -->
-        <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>fastjson</artifactId>
-        </dependency>
-        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-lang3</artifactId>
-        </dependency>
-        <!-- https://mvnrepository.com/artifact/commons-beanutils/commons-beanutils -->
-        <dependency>
-            <groupId>commons-beanutils</groupId>
-            <artifactId>commons-beanutils</artifactId>
-        </dependency>
-        <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
-        <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
-        </dependency>
-        <!-- https://mvnrepository.com/artifact/net.iharder/base64 -->
-        <dependency>
-            <groupId>net.iharder</groupId>
-            <artifactId>base64</artifactId>
-        </dependency>
-        <!-- 解密 -->
-        <dependency>
-            <groupId>org.codehaus.xfire</groupId>
-            <artifactId>xfire-core</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.bouncycastle</groupId>
-            <artifactId>bcprov-jdk16</artifactId>
-        </dependency>
-
-        <!-- ================================================= -->
-        <!-- 网络                                               -->
-        <!-- ================================================= -->
-        <dependency>
-            <groupId>org.apache.httpcomponents</groupId>
-            <artifactId>fluent-hc</artifactId>
-        </dependency>
-    </dependencies>
 </project>
