--- a/houtai/base/biz/main/src/main/resources/application-local.properties
+++ b/houtai/base/biz/main/src/main/resources/application-local.properties
@@ -28,5 +28,6 @@ spring.redis.pool.max-active=8
 ## local
 enableTokenFilter=true
 tokenExpireDay=70
+
 # resource
-rsource.pic.path.root = /Users/zhangjiaming/resource/pic
+spring.resources.static-locations = classpath:static/,file:/Users/zhangjiaming/Documents/fujing/static
