功能全部完成

--- a/houtai/base/biz/main/src/main/resources/application.properties
+++ b/houtai/base/biz/main/src/main/resources/application.properties
@@ -5,9 +5,8 @@ server.port=80
 management.port: 54001
 
 # Ä£°åÄ¿Â¼
-spring.mvc.view.prefix=classpath:/templates/
 spring.mvc.view.suffix=.html
-spirng.resource.static-locations=classpath:static/
+spirng.resource.static-locations=classpath:templates/,classpath:static/
 
 # jpa
 spring.jpa.hibernate.ddl-auto=update
