--- a/houtai/base/biz/main/src/main/resources/application-local.properties
+++ b/houtai/base/biz/main/src/main/resources/application-local.properties
@@ -9,8 +9,8 @@
 ##  ˝æ›ø‚≈‰÷√
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/fujing?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=Hongkong
-spring.datasource.username=test
-spring.datasource.password=test
+spring.datasource.username=root
+spring.datasource.password=aaa38324836
 
 ## redis
 srping.redis.launch=false
