功能全部完成

--- a/houtai/base/biz/main/src/main/resources/application-online.properties
+++ b/houtai/base/biz/main/src/main/resources/application-online.properties
@@ -1,16 +1,16 @@
 ## -Dspring.profiles.active=online
 
 ## 服务器配置
-server.port=443
-server.ssl.key-store=classpath:keephealthy.top.jks
-server.ssl.key-store-password=123456
-server.ssl.key-store-type=JKS
+#server.port=443
+#server.ssl.key-store=classpath:keephealthy.top.jks
+#server.ssl.key-store-password=123456
+#server.ssl.key-store-type=JKS
 
 ## 数据库配置
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://39.96.189.242:3306/test?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=Hongkong
-spring.datasource.username=zjm
-spring.datasource.password=aaa38324836
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/fujing?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=Hongkong
+spring.datasource.username=root
+spring.datasource.password=root
 
 ## redis
 srping.redis.launch=false
@@ -25,5 +25,10 @@ spring.redis.pool.min-idle=1
 spring.redis.pool.max-wait=-1
 spring.redis.pool.max-active=8
 
-## resource
-rsource.pic.path.root = C:/usr/resource/pic
+
+## local
+enableTokenFilter=true
+tokenExpireDay=7
+
+# resource
+spring.resources.static-locations = classpath:static/,file:/Users/zhangjiaming/Documents/fujing/static
