--- a/houtai/base/biz/main/src/main/resources/application-local.properties
+++ b/houtai/base/biz/main/src/main/resources/application-local.properties
@@ -10,7 +10,7 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/fujing?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=Hongkong
 spring.datasource.username=root
-spring.datasource.password=aaa38324836
+spring.datasource.password=root
 
 ## redis
 srping.redis.launch=false
@@ -27,7 +27,8 @@ spring.redis.pool.max-active=8
 
 ## local
 enableTokenFilter=true
-tokenExpireDay=70
+tokenExpireDay=7
 
 # resource
 spring.resources.static-locations = classpath:static/,file:/Users/zhangjiaming/Documents/fujing/static
+ResourceStaticUrl=/Users/zhangjiaming/Documents/fujing/static/
