--- a/houtai/base/biz/main/src/main/resources/application-local.properties
+++ b/houtai/base/biz/main/src/main/resources/application-local.properties
@@ -25,10 +25,11 @@ spring.redis.pool.min-idle=1
 spring.redis.pool.max-wait=-1
 spring.redis.pool.max-active=8
 
+## resource
+spring.resources.static-locations = classpath:static/,file:/Users/zhangjiaming/Documents/fujing/static
+
 ## local
 enableTokenFilter=true
 tokenExpireDay=7
-
-# resource
-spring.resources.static-locations = classpath:static/,file:/Users/zhangjiaming/Documents/fujing/static
 ResourceStaticUrl=/Users/zhangjiaming/Documents/fujing/static/
+path.log=/Users/zhangjiaming/Documents/logs/base
