--- a/houtai/base/biz/main/src/main/resources/application.properties
+++ b/houtai/base/biz/main/src/main/resources/application.properties
@@ -12,6 +12,9 @@ spirng.resource.static-locations=classpath:templates/,classpath:static/
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.properties.hibernate.jdbc.time_zone=Asia/Shanghai
+spring.jackson.time-zone=GMT+8
+serverTimezone=GMT+8
 
 
 
