--- a/houtai/base/biz/main/src/main/resources/application.properties
+++ b/houtai/base/biz/main/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 # ·þÎñÆ÷ÅäÖÃ
 server.port=80
+spring.http.multipart.max-file-size=300Mb
+spring.http.multipart.max-request-size=300Mb
 
 # spring¶Ëµã
 management.port: 54001
@@ -15,6 +17,8 @@ spring.jpa.database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.properties.hibernate.jdbc.time_zone=Asia/Shanghai
 spring.jackson.time-zone=GMT+8
 serverTimezone=GMT+8
+
+
 
 
 
