--- a/houtai/base/biz/main/pom.xml
+++ b/houtai/base/biz/main/pom.xml
@@ -58,6 +58,11 @@
             <artifactId>biz-expire-server</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.base</groupId>
+            <artifactId>biz-authority-server</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
         <!-- ================================================= -->
         <!-- spring                                               -->
         <!-- ================================================= -->
