--- a/houtai/base/biz/biz-authority/biz-authority-server/pom.xml
+++ b/houtai/base/biz/biz-authority/biz-authority-server/pom.xml
@@ -3,19 +3,18 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>biz-expire</artifactId>
+        <artifactId>biz-authority</artifactId>
         <groupId>com.base</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>biz-expire-server</artifactId>
-
+    <artifactId>biz-authority-server</artifactId>
 
     <dependencies>
-    <!-- ================================================= -->
-    <!-- 子模块                                             -->
-    <!-- ================================================= -->
+        <!-- ================================================= -->
+        <!-- 子模块                                             -->
+        <!-- ================================================= -->
         <dependency>
             <groupId>com.base</groupId>
             <artifactId>common</artifactId>
@@ -23,17 +22,7 @@
         </dependency>
         <dependency>
             <groupId>com.base</groupId>
-            <artifactId>user-client</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>com.base</groupId>
-            <artifactId>biz-user-client</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>com.base</groupId>
-            <artifactId>biz-expire-client</artifactId>
+            <artifactId>biz-authority-client</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
         <!-- ================================================= -->
@@ -42,10 +31,6 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
         </dependency>
         <!-- ================================================= -->
         <!-- 数据库                                             -->
@@ -73,14 +58,8 @@
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger-ui</artifactId>
         </dependency>
-        <dependency>
-            <groupId>org.apache.poi</groupId>
-            <artifactId>poi</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.poi</groupId>
-            <artifactId>poi-ooxml</artifactId>
-        </dependency>
-
     </dependencies>
+
+
+
 </project>
