--- a/houtai/base/biz/main/pom.xml
+++ b/houtai/base/biz/main/pom.xml
@@ -60,7 +60,7 @@
         </dependency>
         <dependency>
             <groupId>com.base</groupId>
-            <artifactId>biz-authority-server</artifactId>
+            <artifactId>biz-epidemic-server</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
         <!-- ================================================= -->
