--- a/houtai/base/biz/main/src/main/resources/application-local.properties
+++ b/houtai/base/biz/main/src/main/resources/application-local.properties
@@ -11,6 +11,14 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/fujing?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=Hongkong
 spring.datasource.username=root
 spring.datasource.password=root
+spring.datasource.hikari.connection-test-query=SELECT 1 FROM DUAL
+spring.datasource.hikari.connection-timeout = 600000
+spring.datasource.hikari.maximum-pool-size = 500
+spring.datasource.hikari.max-lifetime = 1800000
+spring.datasource.hikari.minimum-idle = 20
+spring.datasource.hikari.validation-timeout = 3000
+spring.datasource.hikari.idle-timeout = 60000
+spring.datasource.hikari.connection-init-sql = SET NAMES utf8mb4
 
 ## redis
 srping.redis.launch=false
