--- a/houtai/base/biz/main/src/main/resources/application.properties
+++ b/houtai/base/biz/main/src/main/resources/application.properties
@@ -12,7 +12,8 @@ spirng.resource.static-locations=classpath:templates/,classpath:static/
 
 # jpa
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.properties.hibernate.jdbc.time_zone=Asia/Shanghai
 spring.jackson.time-zone=GMT+8
