--- a/houtai/base/biz/main/src/main/resources/application.properties
+++ b/houtai/base/biz/main/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # ·şÎñÆ÷ÅäÖÃ
-server.port=80
-spring.http.multipart.max-file-size=300Mb
-spring.http.multipart.max-request-size=300Mb
+server.port=8888
+spring.servlet.multipart.max-file-size=1000MB
+spring.servlet.multipart.max-request-size=1000MB
 
 # spring¶Ëµã
 management.port: 54001
