--- a/houtai/base/biz/main/pom.xml
+++ b/houtai/base/biz/main/pom.xml
@@ -63,6 +63,11 @@
             <artifactId>biz-epidemic-server</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.base</groupId>
+            <artifactId>biz-wages-server</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
         <!-- ================================================= -->
         <!-- spring                                               -->
         <!-- ================================================= -->
