修改department模块名称

--- a/houtai/base/biz/biz-user/biz-user-server/pom.xml
+++ b/houtai/base/biz/biz-user/biz-user-server/pom.xml
@@ -37,7 +37,7 @@
         </dependency>
         <dependency>
             <groupId>com.base</groupId>
-            <artifactId>department-client</artifactId>
+            <artifactId>biz-department-client</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
         <dependency>
