--- a/houtai/base/biz/main/pom.xml
+++ b/houtai/base/biz/main/pom.xml
@@ -50,7 +50,7 @@
         </dependency>
         <dependency>
             <groupId>com.base</groupId>
-            <artifactId>department-server</artifactId>
+            <artifactId>biz-department-server</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
         <dependency>
