--- a/houtai/base/pom.xml
+++ b/houtai/base/pom.xml
@@ -10,7 +10,7 @@
 		<module>lib</module>
 
 		<module>biz/main</module>
-		<module>biz/department</module>
+		<module>biz/biz-department</module>
 		<module>biz/biz-user</module>
 		<module>biz/biz-expire</module>
 		<module>biz/biz-epidemic</module>
@@ -101,17 +101,17 @@
 			<!-- 单位管理 -->
 			<dependency>
 				<groupId>com.base</groupId>
-				<artifactId>department</artifactId>
+				<artifactId>biz-department</artifactId>
 				<version>0.0.1-SNAPSHOT</version>
 			</dependency>
 			<dependency>
 				<groupId>com.base</groupId>
-				<artifactId>department-client</artifactId>
+				<artifactId>biz-department-client</artifactId>
 				<version>0.0.1-SNAPSHOT</version>
 			</dependency>
 			<dependency>
 				<groupId>com.base</groupId>
-				<artifactId>department-server</artifactId>
+				<artifactId>biz-department-server</artifactId>
 				<version>0.0.1-SNAPSHOT</version>
 			</dependency>
 
