--- a/houtai/base/biz/main/pom.xml
+++ b/houtai/base/biz/main/pom.xml
@@ -68,6 +68,11 @@
             <artifactId>biz-wages-server</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.base</groupId>
+            <artifactId>biz-assessment-serverr</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
         <!-- ================================================= -->
         <!-- spring                                               -->
         <!-- ================================================= -->
