--- a/houtai/base/pom.xml
+++ b/houtai/base/pom.xml
@@ -15,8 +15,9 @@
 		<module>biz/biz-expire</module>
 		<module>biz/biz-epidemic</module>
         <module>biz/biz-wages</module>
+		<module>biz/biz-assessment</module>
 
-    </modules>
+	</modules>
 	<packaging>pom</packaging>
 
 	<name>base</name>
@@ -181,6 +182,23 @@
 			<dependency>
 				<groupId>com.base</groupId>
 				<artifactId>biz-wages-client</artifactId>
+				<version>0.0.1-SNAPSHOT</version>
+			</dependency>
+
+			<!-- 年度考核 -->
+			<dependency>
+				<groupId>com.base</groupId>
+				<artifactId>biz-assessment</artifactId>
+				<version>0.0.1-SNAPSHOT</version>
+			</dependency>
+			<dependency>
+				<groupId>com.base</groupId>
+				<artifactId>biz-assessment-client</artifactId>
+				<version>0.0.1-SNAPSHOT</version>
+			</dependency>
+			<dependency>
+				<groupId>com.base</groupId>
+				<artifactId>biz-assessment-serverr</artifactId>
 				<version>0.0.1-SNAPSHOT</version>
 			</dependency>
 
